--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <body>
         Hello World Goodbye World
+        <script type="text/javascript" src="index.js"></script>
         </body>
 </html>
